objects/Line_Item_Schedule__c.object
<CustomObject>
    <description>To store the breakdown of the contracts abc negotiated amount</description>
    <fields>
        <fullName>Account_Historical_Linker__c</fullName>
        <formula>Contract__r.Payer_Account__r.Historical_Linker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Historical Linker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>USD Amount that will be posted to GL</inlineHelpText>
        <label>USD Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bypass_Delete_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the trigger ValidateLISDeletion will bypass the its validation. This is used by the trigger DeleteLISOnMilestoneDelete to delete the LIS.</description>
        <inlineHelpText>If checked, the trigger ValidateLISDeletion will bypass the its validation. This is used by the trigger DeleteLISOnMilestoneDelete to delete the LIS.</inlineHelpText>
        <label>Bypass Delete Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Currency__c</fullName>
        <formula>IF(ISPICKVAL(Contract__r.Contract_Currency__c, &quot;&quot;), &quot;USD&quot;,
TEXT( Contract__r.Contract_Currency__c)
)</formula>
        <label>Contract Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Exchange_Rate__c</fullName>
        <formula>Contract__r.Exchange_Rate__c</formula>
        <label>Contract Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Historical_Linker__c</fullName>
        <formula>Contract__r.Historical_Linker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Historical Linker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Negotiated_Amount__c</fullName>
        <formula>Contract__r.Negotiated_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Negotiated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Line Item Schedules</relationshipLabel>
        <relationshipName>Line_Item_Schedule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>B{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Historical_Linker__c</fullName>
        <label>Historical Linker</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <formula>Contract__r.Payer_Account__r.Account_Formal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <inlineHelpText>Amount to displayed on the printed/emailed invoice to the Member</inlineHelpText>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Billing_Schedule_del__c</fullName>
        <label>Invoice Billing Schedule</label>
        <referenceTo>Invoice_Billing_Schedule__c</referenceTo>
        <relationshipLabel>Line Item Schedules</relationshipLabel>
        <relationshipName>Line_Item_Schedules_del</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invoice_Comment__c</fullName>
        <description>Populates on the Invoice sent to Member; Invoice Comment must match for all line items included on invoice, else Validation will fail and invoice will not be created.</description>
        <inlineHelpText>This comment will display on the Invoice sent to Members beneath the list of programs and amounts being billed. Invoice Comment must be the same on all Line Items Schedules included in the invoice in order to be generated.</inlineHelpText>
        <label>Invoice Comment</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact_Historical_Linker__c</fullName>
        <formula>Contract__r.Invoice_Contact__r.Historical_Linker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Contact Historical Linker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact__c</fullName>
        <formula>Contract__r.Invoice_Contact__r.FirstName &amp;&quot; &quot;&amp; Contract__r.Invoice_Contact__r.LastName</formula>
        <label>Invoice Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Item_Comment_2__c</fullName>
        <inlineHelpText>This comment will display on the Invoice sent to Members</inlineHelpText>
        <label>Line Item Comment 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Comment__c</fullName>
        <inlineHelpText>This comment will display on the Invoice sent to Members</inlineHelpText>
        <label>Line Item Comment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Contact_Historical_Linker__c</fullName>
        <formula>Contract__r.Main_Contact__r.Historical_Linker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Contact Historical Linker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Contact__c</fullName>
        <formula>Contract__r.Main_Contact__r.FirstName &amp;&quot; &quot; &amp; Contract__r.Main_Contact__r.LastName</formula>
        <label>Main Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalLineItemSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Line Item Schedule</label>
        <referenceTo>Line_Item_Schedule__c</referenceTo>
        <relationshipLabel>Line Item Schedules</relationshipLabel>
        <relationshipName>LineItemSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <description>CR-20130816-3456 formula from related Sales Invoice</description>
        <formula>Sales_Invoice__r.c2g__InvoiceDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-populates from the related Sales Invoice.</inlineHelpText>
        <label>Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Abbreviation__c</fullName>
        <formula>Contract__r.Program__r.Program_Abbreviation__c</formula>
        <label>Program Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Acronym__c</fullName>
        <formula>Contract__r.Program__r.Program_Acronym__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Acronym</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Contract__r.Program__r.Program_Formal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_End_Date__c</fullName>
        <formula>Contract__r.Risk_End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Credit Note</label>
        <referenceTo>c2g__codaCreditNote__c</referenceTo>
        <relationshipLabel>Line Item Schedules</relationshipLabel>
        <relationshipName>LineItemSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipName>Billing_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solomon_Product_Code__c</fullName>
        <formula>Contract__r.Program__r.Solomon_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solomon Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>To distinquish line items on an invoice; defaults to &apos;Member Fee&apos;</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billable Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Fee</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel T&amp;M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Validation__c</fullName>
        <label>Validation</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Line Item Schedule</label>
    <listViews>
        <fullName>DT_View</fullName>
        <columns>Invoice_Billing_Schedule_del__c</columns>
        <columns>Contract_Historical_Linker__c</columns>
        <columns>Institution__c</columns>
        <columns>Program_Acronym__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Amount__c</columns>
        <columns>Invoice_Comment__c</columns>
        <columns>Line_Item_Comment__c</columns>
        <columns>Line_Item_Comment_2__c</columns>
        <columns>Validation__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Validation__c</field>
            <operation>notEqual</operation>
            <value>Pass</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Line_Item_Schedule__c.Line_Item_Schedule</value>
        </filters>
        <filters>
            <field>Invoice_Billing_Schedule_del__c</field>
            <operation>equals</operation>
            <value>60339</value>
        </filters>
        <filters>
            <field>Invoice_Amount__c</field>
            <operation>greaterThan</operation>
            <value>USD 0</value>
        </filters>
        <label>60339</label>
    </listViews>
    <listViews>
        <fullName>SK_View</fullName>
        <columns>Invoice_Billing_Schedule_del__c</columns>
        <columns>Contract_Historical_Linker__c</columns>
        <columns>Institution__c</columns>
        <columns>Program_Acronym__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Amount__c</columns>
        <columns>Invoice_Comment__c</columns>
        <columns>Line_Item_Comment__c</columns>
        <columns>Line_Item_Comment_2__c</columns>
        <columns>Validation__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Validation__c</field>
            <operation>notEqual</operation>
            <value>Pass,Fail</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Line_Item_Schedule__c.Line_Item_Schedule</value>
        </filters>
        <label>SK View</label>
    </listViews>
    <listViews>
        <fullName>Unbilled</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Billing_Schedule_del__c</columns>
        <columns>Institution__c</columns>
        <columns>Contract__c</columns>
        <columns>Type__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Validation__c</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Invoice__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Line_Item_Schedule__c.Line_Item_Schedule</value>
        </filters>
        <label>Unbilled</label>
    </listViews>
    <nameField>
        <displayFormat>Item-{00000}</displayFormat>
        <label>Line Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Item Schedules</pluralLabel>
    <recordTypes>
        <fullName>Line_Item_Schedule</fullName>
        <active>true</active>
        <description>editable line item schedule</description>
        <label>Line Item Schedule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Line_Item_Schedule_Invoiced</fullName>
        <active>true</active>
        <label>Line Item Schedule-Invoiced</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ValidateContractIBS</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Contract__r.Invoice_Billing_Schedule__c )</errorConditionFormula>
        <errorMessage>You must link the Contract to an Invoice Billing Schedule prior to creating Line Item Schedules.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateLISIBS</fullName>
        <active>true</active>
        <errorConditionFormula>if( Invoice_Billing_Schedule_del__c !=  Contract__r.Invoice_Billing_Schedule__c , true, false)</errorConditionFormula>
        <errorDisplayField>Invoice_Billing_Schedule_del__c</errorDisplayField>
        <errorMessage>Invoice Billing Schedule must be same as Contract&apos;s Invoice Billing Schedule.</errorMessage>
    </validationRules>
</CustomObject>